...

    <string name="result_simulate_button_label">Simular novamente</string>
    <string name="result_gross_amount_label">Resultado da simulação</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="alert_dialog_error_message">Não foi possivel completar a sua solicitação tente novamente</string>
    <string name="alert_dialog_error_button_ok">OK</string>

    <string name="result_adapter_header_annualGrossRateProfit">Rendimento total de <font color="00c8b3">%1$s</font></string>

    <string name="result_adapter_investedAmount_label">Valor aplicado inicialmente</string>
    <string name="result_adapter_grossAmount_label">Valor bruto do investimento</string>
    <string name="result_adapter_grossAmountProfit_label">Valor do rendimento</string>
...
